--- a/1111/css.css
+++ b/1111/css.css
@@ -1,13 +1,11 @@
 #box{
+    background-image: url("./img/dhsp.png");
     padding: 0;
-    border: 1px solid red;
+    
     min-height: 700px;
 }
 #header{
     height: 100px;
-    background-color: springgreen;
+    background-color: yellow;
 
-}
-#navi{
-    margin-top: 10px;
 }
